# quarry

./: .gitignore  C  CMakeLists.txt  COperators  KWNegativeTests.hs  KWPositiveTests.hs  KWStrGenerator.hs  LICENSE  Makefile  NegJava  README.md  cKwTable.c  comments.c  comments_tests.c  exquarry.c  identifier_tests.c  javaKwTable.c  javaOperTable.c  javakw_tests.c  kwtester.c  lexers.h  localquarry.tar  misc_lexers.c  numbers_tests.c  quarry.c  quarry.h  quarry_internal.h  quarry_kw.h  quarry_testrunner.c  quarry_testsuites.h  quarry_util.c  quotes_tests.c  reader_tests.c
CSQuarry/: .gitignore  CSQuarry.sln
CSQuarry/CSQuarry/: CSQuarry.csproj  FileInput.cs  Interop.cs  LangType.cs  NQuarry.cs  QInput.cs  Token.cs
CSQuarry/CSQuarry/Properties/: AssemblyInfo.cs
example/: CMakeLists.txt  example.c
example/C/: example.c
example/CPP/: CMakeLists.txt  Example.cpp
hs/: .gitignore  cabal.sandbox.config  hs-quarry.cabal  stack.yaml
hs/Test/: Dummy.hs
hs/Tests/: TestSuite.hs
hs/expt/: LexTest.hs
hs/src/Language/Tokenizer/: C.hs  Internal.hsc
hs/src/Text/: QLexer.hs  QToken.hs
src/: #QReader.cpp#  .#QReader.cpp  CMakeLists.txt  CharLexer.cpp  Characters.cpp  Doxyfile.in  Example.cpp  Lexers.cpp  Numbers.cpp  QContext.cpp  QContext.h  QInternal.h  QMisc.cpp  QReader.cpp  QReader.h  QToken.cpp  QToken.h  Quarry.h  QuarryMaps.cpp  cKwTable.c  cOperTable.c  comments.c  exquarry.c  lexers.h  misc_lexers.c  quarry.c  quarry.h  quarry_export.h  quarry_internal.h  quarry_kw.h  quarry_util.c
tests/: CMakeLists.txt  Chars.txt  CommentsTest.cpp  HugeJavaIn  Idents.txt  ManualComments.txt  Numbers.txt  NumbersTests.cpp  Strings.txt  TokenTests.cpp  comments_tests.c  identifier_tests.c  javakw_tests.c  metaid_tests.c  numbers_tests.c  quarry_testrunner.c  quarry_testsuites.h  quotes_tests.c  reader_tests.c  rtests.cpp
